tests/compile-fail/replicated_type.stderr
error: Token types must be unique
 --> tests/compile-fail/replicated_type.rs:8:16
  |
8 |         "b" => A
  |                ^
